Финальный проект спринта 9 - исправил замечания